; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_theming.c_THEMING_CallOriginalClass.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_theming.c_THEMING_CallOriginalClass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@atSubclassProp = common dso_local global i32 0, align 4
@originalProcs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @THEMING_CallOriginalClass(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @atSubclassProp, align 4
  %13 = call i64 @MAKEINTATOM(i32 %12)
  %14 = trunc i64 %13 to i32
  %15 = call i32 @GetPropW(i32 %11, i32 %14)
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %9, align 8
  %17 = load i32*, i32** @originalProcs, align 8
  %18 = load i64, i64* %9, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @CallWindowProcW(i32 %21, i32 %22, i32 %23, i32 %24, i32 %25)
  ret i32 %26
}

declare dso_local i32 @GetPropW(i32, i32) #1

declare dso_local i64 @MAKEINTATOM(i32) #1

declare dso_local i32 @CallWindowProcW(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
